Gráfica de linea

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-HOLA
+
+<div class="container">
+  <h1>Gráficos Dinámicos <small>Angular</small> </h1>
+  <hr>
+  <router-outlet></router-outlet>
+</div>
